[project]
name = "piapi-faceswap"
description = "A simple ComfyUI nodes that integrates [a/PiAPI faceswap](https://piapi.ai/faceswap-api) service into ComfyUI. This can be helpful if you're trying to create a workflow that includes faceswap for commercial usage."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/5x00/ComfyUI-PiAPI-Faceswap"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PiAPI-Faceswap"
Icon = ""
